[project]
name = "poker-settlements-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16,<1.17",
    "fastapi>=0.115,<0.116",
    "psycopg[binary]>=3.2,<3.3",
    "python-telegram-bot==21.11.1",
    "sqlalchemy>=2.0,<2.1",
    "stripe>=12.0,<13.0",
    "uvicorn>=0.34,<0.35",
]
